lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itdt-ingress
  labels:
    name: itdt
spec:
  tls:
  - hosts:
      - itdt.me
    secretName: itdt-tls-certs
  rules:
  - host: itdt.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: itdt-svc
            port:
              number: 3000
